...
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp

@Composable
fun ContentAlert(
    title: String = "Funcionalidad no disponible",
    message: String = "Esta funcionalidad está planificada para una futura versión. ¡Esté atento a las próximas actualizaciones!",
    onDismissRequest: () -> Unit
) {
    AlertDialog(
        title = { Text(title, style = MaterialTheme.typography.titleMedium) },
        text = { Text(message, style = MaterialTheme.typography.bodyMedium) },
        onDismissRequest = onDismissRequest,
...
